--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,24 @@
 {
   "extends": ["react-app"],
+  "env": {
+    "browser": true,
+    "es6": true,
+    "node": true
+  },
+  "parserOptions": {
+    "ecmaVersion": 2020,
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "jsx": true
+    }
+  },
   "rules": {
     "no-unused-vars": "off",
-    "no-dupe-keys": "off"
+    "no-dupe-keys": "off",
+    "react/jsx-no-undef": "off",
+    "react/jsx-uses-react": "off",
+    "react/react-in-jsx-scope": "off",
+    "react/prop-types": "off",
+    "react/no-unescaped-entities": "off"
   }
 } 
